--- a/FrontEnd/exception-website/public/index.html
+++ b/FrontEnd/exception-website/public/index.html
@@ -9,14 +9,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
-
+    
     <link
     async
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/semantic-ui@2/dist/semantic.min.css"
   />
-
-
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -35,12 +33,19 @@
     <link
   rel="stylesheet"
   href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+  
 />
     <title>Exception</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    
+    <script
+    type="text/javascript"
+    src="https://cdn.jsdelivr.net/gh/sh20raj/AudiPlay/audiplay.min.js"
+    ></script>
+    <div id="root">
+
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -52,4 +57,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  
+  
 </html>
